# ML-shares-trader

./: .config.example  .gitignore  README.md  pyproject.toml  requirements.txt
ml_trader/: download.py  features.py  model.py  utils.py
ml_trader/data_loaders/: quandl.py  yahoo.py
notebooks/: 1. Download Quandl.ipynb  1. Download Yahoo.ipynb  2. Load Quandl to df.ipynb  3. Extract Quandl Features.ipynb  3. Train Quandl.ipynb  Download Quandl.ipynb
