[tool.poetry]
name = "ml-shares-trader"
version = "0.1.0"
description = ""
authors = ["kirill <gugaevkirill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
